--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,59 @@
   <!-- Body -->
 
   <body>
-    <p>test</p>
+
+    <header>
+
+    </header>
+
+    <main>
+      <!-- search bar 
+      and a welcome box -->
+      <section class="grid">
+        <article>
+
+        </article>
+
+      </section>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
