Added header,searchbar, classes and id, categories
making a header and searchbar, classes and id, putting id for categories.

--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,69 @@
   <body>
 
     <header>
-
+      <a href="index.html" id="headertitle">GameTutorialAlliance</a>
     </header>
 
     <main>
       <!-- search bar 
       and a welcome box -->
+      <div class="searchwrap">
+        <div class="search">
+          <input type="text" class="searchterm" placeholder="Search...">
+          <button type="submit" class="searchbutton"> 
+          
+          </button>
+        </div>
+      </div>
+
       <section class="grid">
-        <article>
+        <article class="mostpopulargrid">
 
         </article>
 
+        <article id="fpsgrid">
+
+        </article>
+
+        <article id="rpggrid">
+
+        </article>
+
+        <aticle id="sportgrid">
+
+        </aticle>
+
+        <article id="platformergrid">
+
+        </article>
+
+        <article id="horrorgrid">
+
+        </article>
+
+        <article id="racinggrid">
+
+        </article>
+
+        <article id="adventuregrid">
+
+        </article>
+
+        <article id="fightinggrid">
+
+        </article>
+
+        <article id="puzzlegrid">
+
+        </article>
+
+        <article id="srategygrid">
+
+        </article>
+
+        <article id="actiongrid">
+
+        </article>
       </section>
     </main>
 
