--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,23 @@
   </head>
 
   <!-- Body -->
-  <body>
+  <!-- change the class to match your game -->
+  <body class="bg-GAME">
+    <div class="darken"></div>
+
+    <!-- Put header here -->
+    <header>
+
+    </header>
+
+    <!-- put sidebar here -->
+    <aside>
+
+    </aside>
+
+    <!-- Main Body -->
+    <main class="body">
+      <h1>Test</h1>
+    </main>
   </body>
 </html>
