changed the sidebar

--- a/public/popular.html
+++ b/public/popular.html
@@ -11,7 +11,7 @@
 <body>
 
     <!--Here I create the sidebar with links to different pages on the website-->
-    <aside class="sidebar">
+    <aside>
 
         <!--List of links to game genres-->
         <ul>
@@ -30,7 +30,7 @@
         </ul>
 
         <!--Link to the About Us page-->
-        <div class="about"><a href="about.html">About Us</a></div>
+        <a href="about.html">About Us</a>
 
     </aside>
 </body>
