--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <a href="index.html" class="Homebutton">GAME TUTORIAL ALLIANCE</a>
+            <a href="index.html" class="homebutton">GAMING TUTORIAL ALLIANCE</a>
         </header>
         <main>
             <img src="images/">
