--- a/public/about.html
+++ b/public/about.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <header>
-            <a href="index.html" class="homebutton">GAMING TUTORIAL ALLIANCE</a>
+            <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
         </header>
         <main>
-            <img src="images/">
+            
         </main>
     </body>
 </html>
