added background to html and started on the section navigation

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
   </head>
 
   <!-- Body -->
-  <!-- change the class to match your game -->
-  <body class="bg-GAME">
-    <div class="darken"></div>
+  <body class="">
+    <!-- Background with a darkener -->
+    <!-- change the class to match your game!! -->
+    <div class="bg bg-GAME"></div>
+    <div class="bg darken"></div>
 
     <!-- Put header here -->
     <header>
@@ -26,7 +28,18 @@
 
     <!-- Main Body -->
     <main class="body">
-      <h1>Test</h1>
+      <!-- Change your hero image here!! -->
+      <img class="hero" src="images/hero-GAME.jpg" alt="">
+      <nav>
+        <ul class="flex">
+          <li class="selected"><a href="#">ALL</a></li>
+          <li><a href="#">section1</a></li>
+          <li><a href="#">section2</a></li>
+          <li><a href="#">section3</a></li>
+        </ul>
+      </nav>
+
+
     </main>
   </body>
 </html>
