added more html pages for the sections of gta

--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -32,6 +32,7 @@
       <img class="hero" src="images/hero-GAME.jpg" alt="">
       <nav>
         <ul class="flex">
+          <!-- Change the sections for your tutorial here!! -->
           <li class="selected"><a href="#">ALL</a></li>
           <li><a href="#">section1</a></li>
           <li><a href="#">section2</a></li>
@@ -39,6 +40,15 @@
         </ul>
       </nav>
 
+      <article>
+        <div class="flex">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/" alt="">
+          <div>
+
+          </div>
+        </div>
+      </article>
 
     </main>
   </body>
