--- a/public/choosing-tutorial-page-gta-section3.html
+++ b/public/choosing-tutorial-page-gta-section3.html
@@ -33,10 +33,10 @@
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
-          <li class="selected"><a href="#">ALL</a></li>
-          <li><a href="#">section1</a></li>
-          <li><a href="#">section2</a></li>
-          <li><a href="#">section3</a></li>
+          <li><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
+          <li><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
+          <li><a href="choosing-tutorial-page-gta-section2.html">section2</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-gta-section3.html">section3</a></li>
         </ul>
       </nav>
 
