--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,9 @@
             <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
         </header>
         <main>
-            
+            <section class="container">
+
+            </section>
         </main>
     </body>
 </html>
