--- a/public/choosing-tutorial-page-gta-section1.html
+++ b/public/choosing-tutorial-page-gta-section1.html
@@ -40,13 +40,11 @@
         </ul>
       </nav>
 
-      <article>
-        <div class="flex">
-          <!-- Change the image for each tutorial here!! -->
-          <img src="images/" alt="">
-          <div>
+      <article class="flex">
+        <!-- Change the image for each tutorial here!! -->
+        <img src="images/tutorial-GAME-1.png" alt="">
+        <div>
 
-          </div>
         </div>
       </article>
 
