--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -40,13 +40,16 @@
         </ul>
       </nav>
 
-      <article>
-        <div class="flex">
-          <!-- Change the image for each tutorial here!! -->
-          <img src="images/" alt="">
-          <div>
-
-          </div>
+      <!-- Each article is one tutorial -->
+      <article class="flex">
+        <!-- Change the image for each tutorial here!! -->
+        <img src="images/tutorial-GAME-1.png" alt="">
+        <div>
+          <!-- Change the name of tutorial here!! -->
+          <h2>Name of tutorial</h2>
+          <hr>
+          <!-- Change you name here!! -->
+          <h6>By Thomas Zegers</h6>
         </div>
       </article>
 
