made the orange stay for selected section

--- a/public/popular.html
+++ b/public/popular.html
@@ -15,7 +15,7 @@
 
         <!--List of links to game genres-->
         <ul>
-            <li><a href="popular.html">Most Popular</a></li>
+            <li class="selected"><a href="popular.html" class="remove-padding">Most-Popular</a></li>
             <li><a href="fps.html">FPS</a></li>
             <li><a href="rpg.html">RPG</a></li>
             <li><a href="sport.html">Sport</a></li>
