--- a/public/about.html
+++ b/public/about.html
@@ -9,9 +9,7 @@
             <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
         </header>
         <main>
-            <section class="container">
-
-            </section>
+           <img src="images/gtaabout.png" width="100px" height="100px">
         </main>
     </body>
 </html>
