--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,24 @@
             <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
         </header>
         <main>
-           <img src="images/gtaabout.png" width="100px" height="100px">
+            <section class="image-container">
+                <article class="image-item">
+                    <img src="images/gtaabout.png" alt="Image 1">
+                    <p>My name is Thomas and im the leader of the Group</p>
+                </article>
+                <article class="image-item">
+                    <img src="images/gtaabout.png" alt="Image 2">
+                    <p>My name is Praise and im a member of the group</p>
+                </article>
+                <article class="image-item">
+                    <img src="images/gtaabout.png" alt="Image 3">
+                    <p>My name is Danya and im a member of the group</p>
+                </article>
+                <article class="image-item">
+                    <img src="images/gtaabout.png" alt="Image 4">
+                    <p>My name is Ivan and im a member of the group</p>
+                </article>
+            </section>
         </main>
     </body>
 </html>
