finished choosing tutorial page templates

--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -46,12 +46,64 @@
         <img src="images/tutorial-GAME-1.png" alt="">
         <div>
           <!-- Change the name of tutorial here!! -->
-          <h2>Name of tutorial</h2>
+          <h2 class="margin-0">Name of tutorial</h2>
           <hr>
           <!-- Change you name here!! -->
-          <h6>By Thomas Zegers</h6>
+          <h6 class="margin-0">By Thomas Zegers</h6>
+          <!-- Write a summary of the tutorial here!! -->
+          <p>
+            Introduction to tutorial
+          </p>
         </div>
       </article>
+
+      <article class="flex">
+        <!-- Change the image for each tutorial here!! -->
+        <img src="images/tutorial-GAME-1.png" alt="">
+        <div>
+          <!-- Change the name of tutorial here!! -->
+          <h2 class="margin-0">Name of tutorial</h2>
+          <hr>
+          <!-- Change you name here!! -->
+          <h6 class="margin-0">By Thomas Zegers</h6>
+          <!-- Write a summary of the tutorial here!! -->
+          <p>
+            Introduction to tutorial
+          </p>
+        </div>
+      </article>
+
+      <article class="flex">
+        <!-- Change the image for each tutorial here!! -->
+        <img src="images/tutorial-GAME-1.png" alt="">
+        <div>
+          <!-- Change the name of tutorial here!! -->
+          <h2 class="margin-0">Name of tutorial</h2>
+          <hr>
+          <!-- Change you name here!! -->
+          <h6 class="margin-0">By Thomas Zegers</h6>
+          <!-- Write a summary of the tutorial here!! -->
+          <p>
+            Introduction to tutorial
+          </p>
+        </div>
+      </article>
+
+      <article class="flex">
+        <!-- Change the image for each tutorial here!! -->
+        <img src="images/tutorial-GAME-1.png" alt="">
+        <div>
+          <!-- Change the name of tutorial here!! -->
+          <h2 class="margin-0">Name of tutorial</h2>
+          <hr>
+          <!-- Change you name here!! -->
+          <h6 class="margin-0">By Thomas Zegers</h6>
+          <!-- Write a summary of the tutorial here!! -->
+          <p>
+            Introduction to tutorial
+          </p>
+        </div>
+      </article>  
 
     </main>
   </body>
