--- a/public/puzzle.html
+++ b/public/puzzle.html
@@ -33,4 +33,10 @@
         <a href="about.html">About Us</a>
 
     </aside>
+
+    <!--Creating Search Bar-->
+    <form class="search-form">
+        <input type="text" placeholder="Search...">
+        <button type="submit"></button>
+    </form>
 </body>
