--- a/public/about.html
+++ b/public/about.html
@@ -9,24 +9,45 @@
             <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
         </header>
         <main>
+            
             <section class="image-container">
                 <article class="image-item">
                     <img src="images/gtaabout.png" alt="Image 1">
                     <p>My name is Thomas and im the leader of the Group</p>
-                </article>
+                    <article class="social-links">
+                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                    </article>
+                </article>                
                 <article class="image-item">
                     <img src="images/gtaabout.png" alt="Image 2">
                     <p>My name is Praise and im a member of the group</p>
+                    <article class="social-links">
+                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                    </article>
                 </article>
                 <article class="image-item">
                     <img src="images/gtaabout.png" alt="Image 3">
                     <p>My name is Danya and im a member of the group</p>
+                    <article class="social-links">
+                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                    </article>
                 </article>
                 <article class="image-item">
                     <img src="images/gtaabout.png" alt="Image 4">
                     <p>My name is Ivan and im a member of the group</p>
+                    <article class="social-links">
+                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                    </article>
                 </article>
             </section>
         </main>
     </body>
 </html>
+<!--These are the links for the twitter and instagram icons :
+<a href="https://www.flaticon.com/free-icons/twitter" title="twitter icons">Twitter icons created by Pixel perfect - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Hight Quality Icons - Flaticon</a>
+-->
