start creating boxes

--- a/public/popular.html
+++ b/public/popular.html
@@ -39,4 +39,11 @@
         <input type="text" placeholder="Search...">
         <button type="submit"></button>
     </form>
+
+    <!--Creating boxes for the games-->
+    <section>
+        <article class="game1">
+            <p>test</p>
+        </article>
+    </section>
 </body>
