--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,19 @@
   <!-- Body -->
 
   <body>
+    <div class="bg bg-index"></div>
+    <div class="bg darken"></div>
 
     <header>
-      <a href="index.html" id="headertitle">GameTutorialAlliance</a>
+      <a href="index.html">
+        <img id="headerimage" src="images/header.png">
+      </a>
+      <a href="index.html">
+        <img id="headerlogo" href="index.html" type="button" src="images/gta1.png">
+      </a>
+      <!-- <button class="buttonlogo">
+        <img id="headerlogo1" src="images/gta2.png">
+      </button> -->
     </header>
 
     <main>
@@ -29,55 +39,66 @@
         </div>
       </div>
 
+      <!-- box with text to welcome user -->
+      <article class="boxarticle">
+        <h2 id="welcometoptext">Welcome</h2>
+        <p id="welcomemiddletext">We are a gaming team who specializes  in making a tutorial content for student gamers who likes to play in their free time. The slogan for our Team is Game Learn Enjoy</p>
+        <p id="welcomebottomtext">Find the tutorial for your favourite games</p>
+      </article>
+
       <section class="grid">
-        <article class="mostpopulargrid">
+        <button id="mostpopulargrid">
+          <h2 class="textingrid">Most Popular</h2>
+        </button>
 
-        </article>
+        <button id="fpsgrid">
+          <h2 class="textingrid">FPS</h2>
+        </button>
 
-        <article id="fpsgrid">
+        <button id="rpggrid">
+          <h2 class="textingrid">RPG</h2>
+        </button>
 
-        </article>
+        <button id="sportgrid">
+          <h2 class="textingrid">Sport</h2>
+        </button>
 
-        <article id="rpggrid">
+        <button id="platformergrid">
+          <h2 class="textingrid">Platformer</h2>
+        </button>
 
-        </article>
+        <button id="horrorgrid">
+          <h2 class="textingrid">Horror</h2>
+        </button>
 
-        <aticle id="sportgrid">
+        <button id="racinggrid">
+          <h2 class="textingrid">Racing</h2>
+        </button>
 
-        </aticle>
+        <button id="adventuregrid">
+          <h2 class="textingrid">Adventure</h2>
+        </button>
 
-        <article id="platformergrid">
+        <button id="fightinggrid">
+          <h2 class="textingrid">Fighting</h2>
+        </button>
 
-        </article>
+        <button id="puzzlegrid">
+          <h2 class="textingrid">Puzzle</h2>
+        </button>
 
-        <article id="horrorgrid">
-
-        </article>
-
-        <article id="racinggrid">
-
-        </article>
-
-        <article id="adventuregrid">
-
-        </article>
-
-        <article id="fightinggrid">
-
-        </article>
-
-        <article id="puzzlegrid">
-
-        </article>
-
-        <article id="srategygrid">
-
-        </article>
+        <button id="strategygrid">
+          <h2 class="textingrid">Strategy</h2>
+        </button>
 
         <article id="actiongrid">
-
+          <h2 class="textingrid">Action</h2>
         </article>
       </section>
+
+      <footer>
+        <p>test</p>
+      </footer>
     </main>
 
 
