--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,13 @@
         </article>
       </section>
 
-      <footer>
-        <p>test</p>
+      <footer class="flex">
+        <a href="aboutus.html">
+          <img src="images/aboutus.png">
+        </a>
+        <a href="sitemap.html">
+          <img src="images/sitemap.png">
+        </a>
       </footer>
     </main>
 
