--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -21,8 +21,27 @@
 
     </header>
 
-    <!-- put sidebar here -->
+    <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
+
+      <!--List of links to game genres-->
+      <ul>
+          <li><a href="popular.html" class="remove-padding">Most-Popular</a></li>
+          <li><a href="fps.html">FPS</a></li>
+          <li><a href="rpg.html">RPG</a></li>
+          <li><a href="sport.html">Sport</a></li>
+          <li><a href="platformer.html">Platformer</a></li>
+          <li><a href="horror.html">Horror</a></li>
+          <li><a href="racing.html">Racing</a></li>
+          <li><a href="adventure.html">Adventure</a></li>
+          <li><a href="fighting.html">Fighting</a></li>
+          <li><a href="puzzle.html">Puzzle</a></li>
+          <li><a href="strategy.html">Strategy</a></li>
+          <li><a href="action.html">Action</a></li>
+      </ul>
+
+      <!--Link to the About Us page-->
+      <a href="about.html">About Us</a>
 
     </aside>
 
