worked on boxes

--- a/public/popular.html
+++ b/public/popular.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
-<body>
+<body class="background">
 
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
@@ -41,9 +41,14 @@
     </form>
 
     <!--Creating boxes for the games-->
-    <section>
-        <article class="game1">
-            <p>test</p>
-        </article>
-    </section>
+    <main class="body">
+        <div class="box-container">
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+        </div>
+    </main>
 </body>
