--- a/public/popular.html
+++ b/public/popular.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
-<body class="background">
+<body>
+    <!-- Background with a darkener -->
+    <!-- change the class to match your game!! -->
+    <div class="bg bg-genres"></div>
+    <div class="bg darken"></div>
+
 
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
