making the tutorials clickable

--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -60,69 +60,60 @@
       </nav>
 
       <!-- Each article is one tutorial -->
-      <article class="flex">
-        <!-- Change the image for each tutorial here!! -->
-        <img src="images/tutorial-GAME-1.png" alt="">
-        <div>
-          <!-- Change the name of tutorial here!! -->
-          <h2 class="margin-0">Name of tutorial</h2>
-          <hr>
-          <!-- Change you name here!! -->
-          <h6 class="margin-0">By Thomas Zegers</h6>
-          <!-- Write a summary of the tutorial here!! -->
-          <p>
-            Introduction to tutorial
-          </p>
-        </div>
-      </article>
+      <!-- put the link to the tutorialpage here!! -->
+      <a href="#1">
+        <article class="flex">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-GAME-1.png" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Name of tutorial</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Introduction to tutorial
+            </p>
+          </div>
+        </article>
+      </a>
 
-      <article class="flex">
-        <!-- Change the image for each tutorial here!! -->
-        <img src="images/tutorial-GAME-1.png" alt="">
-        <div>
-          <!-- Change the name of tutorial here!! -->
-          <h2 class="margin-0">Name of tutorial</h2>
-          <hr>
-          <!-- Change you name here!! -->
-          <h6 class="margin-0">By Thomas Zegers</h6>
-          <!-- Write a summary of the tutorial here!! -->
-          <p>
-            Introduction to tutorial
-          </p>
-        </div>
-      </article>
+      <a href="#2">
+        <article class="flex">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-GAME-1.png" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Name of tutorial</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Introduction to tutorial
+            </p>
+          </div>
+        </article>
+      </a>
 
-      <article class="flex">
-        <!-- Change the image for each tutorial here!! -->
-        <img src="images/tutorial-GAME-1.png" alt="">
-        <div>
-          <!-- Change the name of tutorial here!! -->
-          <h2 class="margin-0">Name of tutorial</h2>
-          <hr>
-          <!-- Change you name here!! -->
-          <h6 class="margin-0">By Thomas Zegers</h6>
-          <!-- Write a summary of the tutorial here!! -->
-          <p>
-            Introduction to tutorial
-          </p>
-        </div>
-      </article>
-
-      <article class="flex">
-        <!-- Change the image for each tutorial here!! -->
-        <img src="images/tutorial-GAME-1.png" alt="">
-        <div>
-          <!-- Change the name of tutorial here!! -->
-          <h2 class="margin-0">Name of tutorial</h2>
-          <hr>
-          <!-- Change you name here!! -->
-          <h6 class="margin-0">By Thomas Zegers</h6>
-          <!-- Write a summary of the tutorial here!! -->
-          <p>
-            Introduction to tutorial
-          </p>
-        </div>
-      </article>  
+      <a href="#3">
+        <article class="flex">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-GAME-1.png" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Name of tutorial</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Introduction to tutorial
+            </p>
+          </div>
+        </article>
+      </a>
 
     </main>
   </body>
