--- a/public/choosing-tutorial-page-gta-section2.html
+++ b/public/choosing-tutorial-page-gta-section2.html
@@ -59,15 +59,7 @@
         </ul>
       </nav>
 
-      <article>
-        <div class="flex">
-          <!-- Change the image for each tutorial here!! -->
-          <img src="images/" alt="">
-          <div>
-
-          </div>
-        </div>
-      </article>
+      <!-- Put your tutorials here -->
 
     </main>
   </body>
