--- a/public/choosing-tutorial-page-gta-section1.html
+++ b/public/choosing-tutorial-page-gta-section1.html
@@ -59,21 +59,7 @@
         </ul>
       </nav>
 
-      <article class="flex">
-        <!-- Change the image for each tutorial here!! -->
-        <img src="images/tutorial-GAME-1.png" alt="">
-        <div>
-          <!-- Change the name of tutorial here!! -->
-          <h2 class="margin-0">Name of tutorial</h2>
-          <hr>
-          <!-- Change you name here!! -->
-          <h6 class="margin-0">By Thomas Zegers</h6>
-          <!-- Write a summary of the tutorial here!! -->
-          <p>
-            Introduction to tutorial
-          </p>
-        </div>
-      </article>
+      <!-- Put your tutorials here -->
 
     </main>
   </body>
