--- a/public/choosing-tutorial-page-gta-section3.html
+++ b/public/choosing-tutorial-page-gta-section3.html
@@ -59,15 +59,8 @@
         </ul>
       </nav>
 
-      <article>
-        <div class="flex">
-          <!-- Change the image for each tutorial here!! -->
-          <img src="images/" alt="">
-          <div>
+            <!-- Put your tutorials here -->
 
-          </div>
-        </div>
-      </article>
 
     </main>
   </body>
