--- a/public/popular.html
+++ b/public/popular.html
@@ -46,6 +46,8 @@
           <div class="box"></div>
           <div class="box"></div>
           <div class="box"></div>
+        </div>
+        <div class="box-container">
           <div class="box"></div>
           <div class="box"></div>
           <div class="box"></div>
