helped with the searchbar and flex

--- a/public/popular.html
+++ b/public/popular.html
@@ -46,16 +46,12 @@
     </form>
 
     <!--Creating boxes for the games-->
-    <main class="body">
-        <div class="box-container">
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-        </div>
-        <div class="box-container">
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-        </div>
+    <main class="body flex">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
     </main>
 </body>
