cnage article to button

--- a/public/index.html
+++ b/public/index.html
@@ -91,9 +91,9 @@
           <h2 class="textingrid">Strategy</h2>
         </button>
 
-        <article id="actiongrid">
+        <button id="actiongrid">
           <h2 class="textingrid">Action</h2>
-        </article>
+        </button>
       </section>
 
       <footer class="flex">
