--- a/public/index.html
+++ b/public/index.html
@@ -87,13 +87,14 @@
           <h2 class="textingrid">Puzzle</h2>
         </button>
 
-        <button id="strategygrid">
+        <a href="strategy.html" id="strategygrid">
           <h2 class="textingrid">Strategy</h2>
-        </button>
+        </a>
+        
 
-        <article id="actiongrid">
+        <button id="actiongrid">
           <h2 class="textingrid">Action</h2>
-        </article>
+        </button>
       </section>
 
       <footer class="flex">
