added header to templates

--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -69,7 +69,7 @@
 
       <!-- Each article is one tutorial -->
       <!-- put the link to the tutorialpage here!! -->
-      <a href="#1">
+      <a href="Tutorial-gta-1.html">
         <article class="flex">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-GAME-1.png" alt="">
