--- a/public/choosing-tutorial-page-gta-section2.html
+++ b/public/choosing-tutorial-page-gta-section2.html
@@ -18,7 +18,15 @@
 
     <!-- Put header here -->
     <header>
-
+      <a href="index.html">
+        <img id="headerimage" src="images/header.png">
+      </a>
+      <a href="index.html">
+        <img id="headerlogo" href="index.html" src="images/gta1.png">
+      </a>
+      <!-- <button class="buttonlogo">
+        <img id="headerlogo1" src="images/gta2.png">
+      </button> -->
     </header>
 
     <!--Here I create the sidebar with links to different pages on the website-->
