--- a/public/about.html
+++ b/public/about.html
@@ -5,46 +5,47 @@
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <header>
-            <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
-        </header>
-        <main>
-            
-            <section class="image-container">
-                <article class="image-item">
-                    <img src="images/gtaabout.png" alt="Image 1">
-                    <p>My name is Thomas and im the leader of the Group</p>
-                    <article class="social-links">
-                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
-                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+        <section class="background">
+            <header>
+             <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
+            </header>
+            <main>
+                <section class="image-container">
+                    <article class="image-item">
+                        <img src="images/gtaabout.png" alt="Image 1">
+                        <p>My name is Thomas and im the leader of the Group</p>
+                        <article class="social-links">
+                            <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                            <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                        </article>
+                    </article>                
+                    <article class="image-item">
+                        <img src="images/gtaabout.png" alt="Image 2">
+                        <p>My name is Praise and im a member of the group</p>
+                        <article class="social-links">
+                            <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                            <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                        </article>
                     </article>
-                </article>                
-                <article class="image-item">
-                    <img src="images/gtaabout.png" alt="Image 2">
-                    <p>My name is Praise and im a member of the group</p>
-                    <article class="social-links">
-                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
-                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                    <article class="image-item">
+                        <img src="images/gtaabout.png" alt="Image 3">
+                        <p>My name is Danya and im a member of the group</p>
+                        <article class="social-links">
+                            <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                            <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                        </article>
                     </article>
-                </article>
-                <article class="image-item">
-                    <img src="images/gtaabout.png" alt="Image 3">
-                    <p>My name is Danya and im a member of the group</p>
-                    <article class="social-links">
-                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
-                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                    <article class="image-item">
+                        <img src="images/gtaabout.png" alt="Image 4">
+                        <p>My name is Ivan and im a member of the group</p>
+                        <article class="social-links">
+                            <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                            <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                        </article>
                     </article>
-                </article>
-                <article class="image-item">
-                    <img src="images/gtaabout.png" alt="Image 4">
-                    <p>My name is Ivan and im a member of the group</p>
-                    <article class="social-links">
-                        <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
-                        <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
-                    </article>
-                </article>
-            </section>
-        </main>
+                </section>
+            </main>
+        </section>
     </body>
 </html>
 <!--These are the links for the twitter and instagram icons :
