--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,9 @@
     <body>
         <section class="background">
             <header>
-             <a href="index.html" class="homebutton"><h1>GAMING TUTORIAL ALLIANCE</h1></a>
+                <a href="index.html">
+                    <img id="headerimage" src="images/header.png">
+                </a>
             </header>
             <main>
                 <section class="image-container">
