--- a/public/popular.html
+++ b/public/popular.html
@@ -58,12 +58,12 @@
         </div> <!--https://hollowknight.fandom.com/wiki/Hollow_Knight_(game) --Reference to the picture-->
         <div class="box"><img src="images/fifa.jpg" alt="FIFA" class="gamepic">
             <p class="gamename">FIFA 2023</p>
-        </div><!--https://www.playstation.com/nl-nl/games/ea-sports-fifa-23/ --Reference to the picture-->
+        </div> <!--https://www.playstation.com/nl-nl/games/ea-sports-fifa-23/ --Reference to the picture-->
         <div class="box"><img src="images/minecraft.jpg" alt="Minecraft" class="gamepic">
             <p class="gamename">Minecraft</p>
-        </div>
+        </div> <!--https://www.pxfuel.com/en/query?q=minecraft+poster --Reference to the picture-->
         <div class="box"><img src="images/overwatch.jpg" alt="Overwatch" class="gamepic">
             <p class="gamename">Overwatch</p>
-        </div><!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
+        </div> <!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
     </main>
 </body>
