--- a/public/sport.html
+++ b/public/sport.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+    <!-- Background with a darkener -->
+    <!-- change the class to match your game!! -->
+    <div class="bg bg-genres"></div>
+    <div class="bg darken"></div>
+
 
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
@@ -39,4 +44,11 @@
         <input type="text" placeholder="Search...">
         <button type="submit"></button>
     </form>
+
+    <!--Creating boxes for the games-->
+    <main class="body flex">
+        <div class="box"><img src="images/fifa.jpg" alt="FIFA" class="gamepic">
+            <p class="gamename">FIFA 2023</p>
+        </div> <!--https://www.playstation.com/nl-nl/games/ea-sports-fifa-23/ --Reference to the picture-->
+    </main>
 </body>
