--- a/public/fps.html
+++ b/public/fps.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+    <!-- Background with a darkener -->
+    <!-- change the class to match your game!! -->
+    <div class="bg bg-genres"></div>
+    <div class="bg darken"></div>
+
 
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
@@ -39,4 +44,14 @@
         <input type="text" placeholder="Search...">
         <button type="submit"></button>
     </form>
+
+    <!--Creating boxes for the games-->
+    <main class="body flex">
+        <div class="box"><img src="images/csgo.jpg" alt="CSGO" class=gamepic>
+            <p class="gamename">Counter Strike Global Offensive</p>
+        </div> <!--https://nl.ign.com/counter-strike-global-offensive --Reference to the picture-->
+        <div class="box"><img src="images/overwatch.jpg" alt="Overwatch" class="gamepic">
+            <p class="gamename">Overwatch</p>
+        </div> <!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
+    </main>
 </body>
