--- a/public/rpg.html
+++ b/public/rpg.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+    <!-- Background with a darkener -->
+    <!-- change the class to match your game!! -->
+    <div class="bg bg-genres"></div>
+    <div class="bg darken"></div>
+
 
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
@@ -39,4 +44,11 @@
         <input type="text" placeholder="Search...">
         <button type="submit"></button>
     </form>
+
+    <!--Creating boxes for the games-->
+    <main class="body flex">
+        <div class="box"><img src="images/gta.jpg" alt="GTA" class="gamepic">
+            <p class="gamename">Grand Theft Auto 5</p>
+        </div> <!--https://en.wikipedia.org/wiki/Grand_Theft_Auto_V --Reference to the picture-->
+    </main>
 </body>
