--- a/public/strategy.html
+++ b/public/strategy.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+    <!-- Background with a darkener -->
+    <!-- change the class to match your game!! -->
+    <div class="bg bg-genres"></div>
+    <div class="bg darken"></div>
+
 
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
