fixwd some classes

--- a/public/Tutorial-gta-1.html
+++ b/public/Tutorial-gta-1.html
@@ -56,9 +56,16 @@
 
     <!-- Main Body -->
     <main class="body">
-        <a class="dark-box" href="choosing-tutorial-page-gta-all.html">
-            Back
-        </a>
+        <section class="flex tutorial">
+            <a class="dark-box" href="choosing-tutorial-page-gta-all.html">
+                Back
+            </a>
+            <a class="orange-box" href="choosing-tutorial-page-gta-all.html">
+                <!-- Change the name to your game here!! -->
+                GTA V
+            </a>
+        </section>
+        
 
     </main>
   </body>
