--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -70,7 +70,7 @@
       <!-- Each article is one tutorial -->
       <!-- put the link to the tutorialpage here!! -->
       <a href="Tutorial-gta-1.html">
-        <article class="flex">
+        <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-GAME-1.png" alt="">
           <div>
@@ -88,7 +88,7 @@
       </a>
 
       <a href="#2">
-        <article class="flex">
+        <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-GAME-1.png" alt="">
           <div>
@@ -106,7 +106,7 @@
       </a>
 
       <a href="#3">
-        <article class="flex">
+        <article class="flex tutorial ">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-GAME-1.png" alt="">
           <div>
