--- a/public/about.html
+++ b/public/about.html
@@ -14,7 +14,7 @@
             <main>
                 <section class="image-container">
                     <article class="image-item">
-                        <img src="images/gtaabout.png" alt="Image 1">
+                        <img src="images/thomas.jpg" alt="thomas">
                         <p>My name is Thomas and im the leader of the Group</p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
@@ -22,7 +22,7 @@
                         </article>
                     </article>                
                     <article class="image-item">
-                        <img src="images/gtaabout.png" alt="Image 2">
+                        <img src="images/praise.jpg" alt="praise">
                         <p>My name is Praise and im a member of the group</p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
@@ -30,7 +30,7 @@
                         </article>
                     </article>
                     <article class="image-item">
-                        <img src="images/gtaabout.png" alt="Image 3">
+                        <img src="images/danya.jpg" alt="danya">
                         <p>My name is Danya and im a member of the group</p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
@@ -38,7 +38,7 @@
                         </article>
                     </article>
                     <article class="image-item">
-                        <img src="images/gtaabout.png" alt="Image 4">
+                        <img src="images/ivan.jpeg" alt="ivan">
                         <p>My name is Ivan and im a member of the group</p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
