added video and footer nav

--- a/public/Tutorial-gta-1.html
+++ b/public/Tutorial-gta-1.html
@@ -28,7 +28,7 @@
         <!-- <button class="buttonlogo">
           <img id="headerlogo1" src="images/gta2.png">
         </button> -->
-      </header>
+    </header>
 
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
@@ -64,6 +64,45 @@
                 <!-- Change the name to your game here!! -->
                 GTA V
             </a>
+        </section>
+        <section class="tutorial dark-box">
+            <div class="flex">
+                <div class="flex ">
+                    <img src="images/gta1.png" alt="">
+                    <h6> - Thomas</h6>
+                </div>
+                <h2>
+                    <!-- Name of tutorial here!! -->
+                    How to move
+                </h2>
+            </div>
+            <!-- put the tutorial in this div -->
+            <div class="flex">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea molestias illo corporis mollitia reiciendis quas, 
+                    error laudantium doloremque ipsam totam quibusdam distinctio, culpa inventore neque, a ab explicabo suscipit 
+                    nihil magnam harum recusandae? Repudiandae placeat assumenda quae, magni cumque sed, odio debitis quo, labore
+                    harum dolor qui. Perspiciatis nulla tempore numquam quidem natus, velit quas cumque ex quisquam maxime repellendus
+                    eum autem officiis ea aliquid blanditiis repellat, deserunt veritatis quae earum odit cum totam unde quis! Quibusdam 
+                    nisi quis nesciunt nostrum distinctio sequi rem assumenda tempora repellat nobis iusto aut quas, minus ullam adipisci 
+                    eveniet aliquam maxime facilis pariatur possimus? ipsum dolor sit amet consectetur, adipisicing elit. Tempora ipsa fugit, 
+                    nisi debitis ipsum laboriosam veniam perferendis, nemo ducimus voluptates, id laborum voluptate suscipit ab! Quis, 
+                    perspiciatis. Nobis, officia exercitationem.
+                </p>
+                <iframe src="https://www.youtube.com/embed/9nvKTm5A8Gs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+            </div>
+            <!-- navigation under the tutorial -->
+            <nav class="flex">
+                <ul class="flex">
+                  <!-- Change the sections for your tutorial here!! -->
+                  <li><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
+                  <li><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
+                  <li><a href="choosing-tutorial-page-gta-section2.html">section2</a></li>
+                  <li><a href="choosing-tutorial-page-gta-section3.html">section3</a></li>
+                </ul>
+                <a href="choosing-tutorial-page-gta-section3.html">Next</a>
+              </nav>
+
         </section>
         
 
